--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -130,11 +130,6 @@ server {
             set $force_SSL    NOSSL; 
         }
 
-        if ($force_SSL = NOSSL) {
-         #return 301 http://$host$request_uri;
-         add_header   X-TESTING: "NOSSSSSSSSS";
-         break;
-        }
 
 
 #/(x/|app/|w3c/|favicon\.ico|p3p\.xml|apple-touch-icon-144x144\.png) 
@@ -163,6 +158,14 @@ server {
     # LOCATION >>
     # MAIN SITE LOCATION 
     location / {
+
+
+        if ($force_SSL = NOSSL) {
+         #return 301 http://$host$request_uri;
+         more_set_headers          "XXXXXX: MAINLOCATION";
+         break;
+        }
+
 
         # Additional Headers
         more_set_headers          "Server: DECALS";
@@ -229,6 +232,13 @@ server {
     # LOCATION >>
     # DECALICIOUS.com/blog (Blogger blog.decalicious.com) **** 
     location ~* ^/blog/(.*) {
+
+        if ($force_SSL = NOSSL) {
+         #return 301 http://$host$request_uri;
+         more_set_headers          "XXXXXX: BLOGLOCATION";
+         break;
+        }
+
     
         # Variables so we can redirect later
         set $blog_url            'blog.decalicious.com';
