--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -159,14 +159,6 @@ server {
     # MAIN SITE LOCATION 
     location / {
 
-
-        if ($force_SSL = NOSSL) {
-         #return 301 http://$host$request_uri;
-         more_set_headers          "XXXXXX: MAINLOCATION";
-         break;
-        }
-
-
         # Additional Headers
         more_set_headers          "Server: DECALS";
         add_header                Cache-Control "public, max-age=60";
@@ -218,10 +210,10 @@ server {
 
     # LOCATION >>
     # DECALICIOUS.com/BLOG (Add Missing Slash) **** 
- #   location = /blog {
- #       return 302 http://www.decalicious.com/blog/;
- #       break;
- #   }
+    location = /blog {
+        return 302 http://www.decalicious.com/blog/;
+        break;
+    }
 
     location = /blog/robots.txt {
         #deny all;
@@ -232,14 +224,7 @@ server {
     # LOCATION >>
     # DECALICIOUS.com/blog (Blogger blog.decalicious.com) **** 
     location ~* ^/blog/(.*) {
-
-        if ($force_SSL = NOSSL) {
-         #return 301 http://$host$request_uri;
-         more_set_headers          "XXXXXX: BLOGLOCATION";
-         break;
-        }
-
-    
+  
         # Variables so we can redirect later
         set $blog_url            'blog.decalicious.com';
         set $url_full            '$1';
@@ -253,10 +238,10 @@ server {
 #        }
 
         # Make sure blog is only available under www domain
- #       if ( $host != 'www.decalicious.com' ) {
- #         rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
- #         break;
- #       }
+        if ( $host != 'www.decalicious.com' ) {
+          rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
+          break;
+        }
 
         # Rewrite outbound text to new url | rewrite https for image sources
         subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
