Headers for testing

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -159,6 +159,16 @@ server {
     # MAIN SITE LOCATION 
     location / {
 
+
+        # FIX PROTOCOL - Came In Using HTTP but on WWW Domain ... (HTTPWWW)
+        if ($force_SSL = NOSSL) {
+         #return 301 http://$host$request_uri;
+         more_set_headers          "X-NOSSL: Main Location";
+         break;
+        }
+
+
+
         # Additional Headers
         more_set_headers          "Server: DECALS";
         add_header                Cache-Control "public, max-age=60";
@@ -224,6 +234,17 @@ server {
     # LOCATION >>
     # DECALICIOUS.com/blog (Blogger blog.decalicious.com) **** 
     location ~* ^/blog/(.*) {
+
+
+
+        # FIX PROTOCOL - Came In Using HTTP but on WWW Domain ... (HTTPWWW)
+        if ($force_SSL = NOSSL) {
+         #return 301 http://$host$request_uri;
+         more_set_headers          "X-NOSSL: Main Location";
+         break;
+        }
+
+
   
         # Variables so we can redirect later
         set $blog_url            'blog.decalicious.com';
