different match for blog

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -126,7 +126,7 @@ server {
         }
 
         # NO SSL HERE
-        if ($uri ~* ^'/blog/') {
+        if ($uri ~ /blog) {
             set $force_SSL    NOSSL; 
         }
 
