--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -126,6 +126,7 @@ server {
         }
 
         # NO SSL HERE
+        #if ($uri ~^/blog/) {
         if ($uri ~ /blog) {
             set $force_SSL    NOSSL; 
         }
@@ -164,7 +165,7 @@ server {
         if ($force_SSL = NOSSL) {
          #return 301 http://$host$request_uri;
          more_set_headers          "X-NOSSL: Main Location";
-         break;
+         
         }
 
 
@@ -241,7 +242,7 @@ server {
         if ($force_SSL = NOSSL) {
          #return 301 http://$host$request_uri;
          more_set_headers          "X-NOSSL: Main Location";
-         break;
+         
         }
 
 
