--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -237,15 +237,6 @@ server {
     location ~* ^/blog/(.*) {
 
 
-
-        # FIX PROTOCOL - Came In Using HTTP but on WWW Domain ... (HTTPWWW)
-        if ($force_SSL = NOSSL) {
-         #return 301 http://$host$request_uri;
-         more_set_headers          "X-NOSSL: Main Location";
-         
-        }
-
-
   
         # Variables so we can redirect later
         set $blog_url            'blog.decalicious.com';
@@ -253,11 +244,11 @@ server {
 
 
         # Turn off SSL for Blog
-#        if ($ssl_protocol != "") {
-#         #rewrite ^   http://www.decalicious.com$request_uri? permanent;
-#         return 302 http://www.decalicious.com/blog/$url_full;
-#         break;
-#        }
+        if ($ssl_protocol != "") {
+         #rewrite ^   http://www.decalicious.com$request_uri? permanent;
+         return 302 http://www.decalicious.com/blog/$url_full;
+         break;
+        }
 
         # Make sure blog is only available under www domain
         if ( $host != 'www.decalicious.com' ) {
