--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -125,10 +125,9 @@ server {
             set $force_SSL    "${force_SSL}WWW"; 
         }
 
-        # NO SSL HERE
-        #if ($uri ~^/blog/) {
-        if ($uri ~ /blog) {
-            set $force_SSL    NOSSL; 
+        # No SSL Locations Including BLOG
+        if ($uri ~^/blog) {
+            set $force_SSL    "${force_SSL}XX";
         }
 
 
@@ -148,6 +147,14 @@ server {
          rewrite ^ http:/$host$request_uri permanent;
          break;
         }
+
+        # FIX PROTOCOL - Came In Using HTTPS NOT WWW (HTTPS)
+        if ($force_SSL = HTTPSWWWXX) {
+         #return 301 http://$host$request_uri;
+         rewrite ^ http:/$host$request_uri permanent;
+         break;
+        }
+
 
 
 
