--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -126,7 +126,7 @@ server {
         }
 
         # No SSL Locations Including BLOG
-        if ( $uri ~^/blog ) {
+        if ( ~^/blog ) {
             set $force_SSL    "${force_SSL}XX";
         }
 
