--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -95,23 +95,18 @@ server {
     allow              all;
     server_tokens      off;
 
-    # Prevent Scapers
-    if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
 
-    # LOCATION >>
-    # IIS FARM DASHBOARD
-    location /dashboard/nginx {
-        check_status;
-        access_log   off;
-        # allow SOME.IP.ADD.RESS;
-        # deny all;
-        allow all;
-    }
-
-
-      # ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+      #======================================================
+      #
+      #          GLOBAL REDIRECT RULES ALL LOCATIONS
+      #
+      # ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
       # BEGIN RULE GROUP TO REDIRECT TO HTTP/HTTPS PROTOCOL
 
+        # Prevent Scapers
+        if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
+
+        #/(x/|app/|w3c/|favicon\.ico|p3p\.xml|apple-touch-icon-144x144\.png) 
         # Default Value HTTPS
         set $force_SSL    HTTPS;
 
@@ -126,13 +121,9 @@ server {
         }
 
         # No SSL Locations Including BLOG
-        if ( ~^/blog ) {
+        if ($request_uri  ~^/blog ) {
             set $force_SSL    "${force_SSL}XX";
         }
-
-
-
-#/(x/|app/|w3c/|favicon\.ico|p3p\.xml|apple-touch-icon-144x144\.png) 
 
         # FIX PROTOCOL - Came In Using HTTP but on WWW Domain ... (HTTPWWW)
         if ($force_SSL = HTTPWWW) {
@@ -155,13 +146,21 @@ server {
          break;
         }
 
-
-
-
       # END RULE GROUP TO REDIRECT TO HTTP/HTTPS PROTOCOL
       # ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 
+
+
+    # LOCATION >>
+    # IIS FARM DASHBOARD
+    location /dashboard/nginx {
+        check_status;
+        access_log   off;
+        # allow SOME.IP.ADD.RESS;
+        # deny all;
+        allow all;
+    }
 
     # LOCATION >>
     # MAIN SITE LOCATION 
