--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -120,11 +120,6 @@ server {
             set $force_SSL    "${force_SSL}WWW"; 
         }
 
-        # No SSL Locations Including BLOG
-        if ($request_uri  ~^/blog ) {
-            set $force_SSL    "${force_SSL}XX";
-        }
-
         # FIX PROTOCOL - Came In Using HTTP but on WWW Domain ... (HTTPWWW)
         if ($force_SSL = HTTPWWW) {
          #return 301 http://$host$request_uri;
@@ -139,12 +134,7 @@ server {
          break;
         }
 
-        # FIX PROTOCOL - Came In Using HTTPS NOT WWW (HTTPS)
-        if ($force_SSL = HTTPSWWWXX) {
-         #return 301 http://$host$request_uri;
-         rewrite ^ http:/$host$request_uri permanent;
-         break;
-        }
+
 
       # END RULE GROUP TO REDIRECT TO HTTP/HTTPS PROTOCOL
       # ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -165,16 +155,6 @@ server {
     # LOCATION >>
     # MAIN SITE LOCATION 
     location / {
-
-
-        # FIX PROTOCOL - Came In Using HTTP but on WWW Domain ... (HTTPWWW)
-        if ($force_SSL = NOSSL) {
-         #return 301 http://$host$request_uri;
-         more_set_headers          "X-NOSSL: Main Location";
-         
-        }
-
-
 
         # Additional Headers
         more_set_headers          "Server: DECALS";
@@ -242,6 +222,14 @@ server {
     # DECALICIOUS.com/blog (Blogger blog.decalicious.com) **** 
     location ~* ^/blog/(.*) {
 
+        # Update Variable So We Can Catch SSL 
+        set $force_SSL    "${force_SSL}XX";
+
+        if ($force_SSL = HTTPSWWWXX) {
+         return 301 http://pooop.net;
+         #rewrite ^ http:/$host$request_uri permanent;
+         break;
+        }
 
   
         # Variables so we can redirect later
