--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -222,7 +222,7 @@ server {
         set $force_SSL    "${force_SSL}XX";
 
         if ($force_SSL = HTTPSWWWXX) {
-         return 301 http://pooop.net;
+         return 301 http:/$host$request_uri;
          #rewrite ^ http:/$host$request_uri permanent;
          break;
         }
