--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -120,21 +120,6 @@ server {
             set $force_SSL    "${force_SSL}WWW"; 
         }
 
-        # FIX PROTOCOL - Came In Using HTTP but on WWW Domain ... (HTTPWWW)
-        if ($force_SSL = HTTPWWW) {
-         #return 301 http://$host$request_uri;
-         rewrite ^ https://www.decalicious.com$request_uri permanent;
-         break;
-        }
-
-        # FIX PROTOCOL - Came In Using HTTPS NOT WWW (HTTPS)
-        if ($force_SSL = HTTPS) {
-         #return 301 http://$host$request_uri;
-         rewrite ^ http:/$host$request_uri permanent;
-         break;
-        }
-
-
 
       # END RULE GROUP TO REDIRECT TO HTTP/HTTPS PROTOCOL
       # ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -152,6 +137,20 @@ server {
     # LOCATION >>
     # MAIN SITE LOCATION 
     location / {
+
+        # FIX PROTOCOL - Came In Using HTTP but on WWW Domain ... (HTTPWWW)
+        if ($force_SSL = HTTPWWW) {
+         #return 301 http://$host$request_uri;
+         rewrite ^ https://www.decalicious.com$request_uri permanent;
+         break;
+        }
+
+        # FIX PROTOCOL - Came In Using HTTPS NOT WWW (HTTPS)
+        if ($force_SSL = HTTPS) {
+         #return 301 http://$host$request_uri;
+         rewrite ^ http:/$host$request_uri permanent;
+         break;
+        }
 
         # Additional Headers
         more_set_headers          "Server: DECALS";
@@ -218,20 +217,18 @@ server {
     # DECALICIOUS.com/blog (Blogger blog.decalicious.com) **** 
     location ~* ^/blog/(.*) {
 
-        # Update Variable So We Can Catch SSL 
-        set $force_SSL    "${force_SSL}XX";
-
-        if ($force_SSL = HTTPSWWWXX) {
-         return 301 http:/$host$request_uri;
-         #rewrite ^ http:/$host$request_uri permanent;
-         break;
-        }
-
-  
         # Variables so we can redirect later
         set $blog_url            'blog.decalicious.com';
         set $url_full            '$1';
 
+        # Update Variable So We Can Catch SSL 
+        set $force_SSL    "${force_SSL}XX";
+
+        if ($force_SSL = HTTPSWWWXX) {
+         return 301 http://www.decalicious.com/blog/$url_full;
+         #rewrite ^ http:/$host$request_uri permanent;
+         break;
+        }
 
         # Turn off SSL for Blog
         if ($ssl_protocol != "") {
