--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -138,17 +138,17 @@ server {
     # MAIN SITE LOCATION 
     location / {
 
-        # FIX PROTOCOL - Came In Using HTTP but on WWW Domain ... (HTTPWWW)
+        # FIX PROTOCOL - Came In Using HTTP on WWW Domain (FORCE SSL)... (HTTPWWW)
         if ($force_SSL = HTTPWWW) {
-         #return 301 http://$host$request_uri;
-         rewrite ^ https://www.decalicious.com$request_uri permanent;
+         return 302 https://$host$request_uri;
+         #rewrite ^ https://www.decalicious.com$request_uri permanent;
          break;
         }
 
-        # FIX PROTOCOL - Came In Using HTTPS NOT WWW (HTTPS)
+        # FIX PROTOCOL - Came In Using HTTPS but on a subdomain which doesnt support it (FORCE HTTP)
         if ($force_SSL = HTTPS) {
-         #return 301 http://$host$request_uri;
-         rewrite ^ http:/$host$request_uri permanent;
+         return 302 http://$host$request_uri;
+         #rewrite ^ http:/$host$request_uri permanent;
          break;
         }
 
@@ -202,10 +202,10 @@ server {
 
     # LOCATION >>
     # DECALICIOUS.com/BLOG (Add Missing Slash) **** 
-    location = /blog {
-        return 302 http://www.decalicious.com/blog/;
-        break;
-    }
+#    location = /blog {
+#        return 302 http://www.decalicious.com/blog/;
+#        break;
+#    }
 
     location = /blog/robots.txt {
         #deny all;
@@ -225,7 +225,7 @@ server {
         set $force_SSL    "${force_SSL}XX";
 
         if ($force_SSL = HTTPSWWWXX) {
-         return 301 http://www.decalicious.com/blog/$url_full;
+         return 302 http://www.decalicious.com/blog/$url_full;
          #rewrite ^ http:/$host$request_uri permanent;
          break;
         }
