--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -300,6 +300,20 @@ server {
     # DECALICIOUS.COM/API (No Caching + Cors Headers on REST Requests) 
     location /api {
 
+        # FIX PROTOCOL - Came In Using HTTP on WWW Domain (FORCE SSL)... (HTTPWWW)
+        if ($force_SSL = HTTPWWW) {
+         return 302 https://$host$request_uri;
+         #rewrite ^ https://www.decalicious.com$request_uri permanent;
+         break;
+        }
+
+        # FIX PROTOCOL - Came In Using HTTPS but on a subdomain which doesnt support it (FORCE HTTP)
+        if ($force_SSL = HTTPS) {
+         return 302 http://$host$request_uri;
+         #rewrite ^ http:/$host$request_uri permanent;
+         break;
+        }
+
         # Additional Headers
         more_set_headers          "Server: DECALS-API";
         add_header                Cache-Control "private";
