--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -86,9 +86,9 @@ server {
     ssl_certificate_key       /usr/share/nginx/ssl-certs/decalicious_com/decalicious_com.key;
 
     # Headers Force SSL Cookies
-    add_header                Strict-Transport-Security "max-age=16070400; includeSubdomains";
+    #add_header                Strict-Transport-Security "max-age=16070400; includeSubdomains";
     add_header                X-Frame-Options SAMEORIGIN;
-    add_header                Cache-Control public;
+    #add_header                Cache-Control public;
 
     # Server Performance Settings
     keepalive_timeout  30s;
