Log Only Critical Errors

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -531,10 +531,10 @@ server {
         #error_log           /dev/null;
     # LOGGING - CRITICAL
         #error_log           /var/log/nginx/decalicious-error.log crit;
-        #access_log          /var/log/nginx/decalicious.log ;
+        access_log           /dev/null;
     # LOGGING - DEBUG
-        error_log           /var/log/nginx/decalicious-error.log debug;
-        access_log          /var/log/nginx/decalicious.log ;
+        #error_log           /var/log/nginx/decalicious-error.log debug;
+        #access_log          /var/log/nginx/decalicious.log ;
 }
 
 
