--- a/vhosts/nutraxen.conf
+++ b/vhosts/nutraxen.conf
@@ -188,9 +188,9 @@ server {
 
  # NO LOGGING
  access_log          /dev/null;
- #error_log           /dev/null;
+ error_log           /dev/null;
  # DEBUG LOGGING
- error_log           /var/log/nginx/nutraxen.com.error.log debug;
+ #error_log           /var/log/nginx/nutraxen.com.error.log debug;
  #access_log          /var/log/nginx/nutraxen.com.log ;
 }
 
@@ -353,9 +353,9 @@ server {
 
     # NO LOGGING
     access_log          /dev/null;
-    #error_log           /dev/null;
+    error_log           /dev/null;
     # DEBUG LOGGING
-    error_log           /var/log/nginx/x.nutraxen.com.error.log debug;
+    #error_log           /var/log/nginx/x.nutraxen.com.error.log debug;
     #access_log          /var/log/nginx/x.nutraxen.com.log ;
   }
 
