Nginx LUA Support

--- a/etc-config/nginx.custom.conf
+++ b/etc-config/nginx.custom.conf
@@ -1,6 +1,6 @@
 # CUSTOM NGINX CONFIGURATION - MATADOR
 # CUSTOMIZED WITH GZIP and PERFORMANCE SETTINGS
-# LAST UPDATED BY FRANK
+# LAST UPDATED BY FRANK 5-14-2014
 
 # NANO /etc/security/limits.conf  
 # Add the two following lines.
@@ -24,7 +24,17 @@ http {
     client_body_buffer_size   128k;
     client_body_temp_path     /tmp/client_body_temp;
 
+    # MIME TYPES
     include                   mime.types;
+
+
+    # GEO IP LOCATION STUFF  
+    include                   timezone.conf;
+    geoip_country             /usr/share/nginx/GeoIP/GeoIP.dat;
+    geoip_city                /usr/share/nginx/GeoIP/GeoLiteCity.dat;
+    geoip_org                 /usr/share/nginx/GeoIP/GeoIPASNum.dat;
+
+
     #default_type             application/octet-stream;
     default_type              text/html;  
     server_tokens             off;
