--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -134,6 +134,11 @@ server {
         allow all;
     }
 
+    # TEST LOCATION FOR NGINX ECHO FILTER
+    location /echo {
+        echo "hello, world!";    
+    }
+
     # LOCATION >>
     # MAIN SITE LOCATION 
     location / {
