Dont Cache Error Pages

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -460,7 +460,7 @@ server {
 
         # Additional Headers
         more_set_headers          "Server: DECALS-X";
-        add_header                Cache-Control "no-transform,public,max-age=36720000";
+        add_header                Cache-Control "no-transform,public,max-age=36720000,s-maxage=262800";
         etag                      on;
         expires                   425d;
 
@@ -508,21 +508,30 @@ server {
 
     # ERROR - MAINTENANCE 
     location  ^~ /maintenance.html {
-        root   /usr/share/nginx/sites/decalicious-down/;
-        index  maintenance.html index.html index.htm;
-        allow all;
+        more_set_headers          "Server: DECALS-ERRS";
+        add_header                Cache-Control "no-transform,public,max-age=60,s-maxage=60";
+        expires                   1m;
+        root                      /usr/share/nginx/sites/decalicious-down/;
+        index                     maintenance.html index.html index.htm;
+        allow                     all;
     }
 
     # ERROR - PAGE NOT FOUND
     location  ^~ /404.html {
-        root   /usr/share/nginx/sites/decalicious-down/;
-        index  404.html index.html index.htm;
-        allow all;
+        more_set_headers          "Server: DECALS-ERRS";
+        add_header                Cache-Control "no-transform,public,max-age=60,s-maxage=60";
+        expires                   1m;
+        root                      /usr/share/nginx/sites/decalicious-down/;
+        index                     404.html index.html index.htm;
+        allow                     all;
     }
 
     # ERROR - ERROR PAGE SCRIPTS 
         location /xs {
-        root   /usr/share/nginx/sites/decalicious-down/;
+        more_set_headers          "Server: DECALS-ERRS";
+        add_header                Cache-Control "no-transform,public,max-age=60,s-maxage=60";
+        expires                   1m;
+        root                      /usr/share/nginx/sites/decalicious-down/;
         allow  all;
     }
 
