Turn on logging

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -544,7 +544,7 @@ server {
         #access_log          /dev/null;
         #error_log           /dev/null;
     # LOGGING - CRITICAL
-        #error_log           /var/log/nginx/decalicious-error.log crit;
+        error_log            /var/log/nginx/decalicious-error.log crit;
         access_log           /dev/null;
     # LOGGING - DEBUG
         #error_log           /var/log/nginx/decalicious-error.log debug;
