Intercept Errors X Directory

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -501,7 +501,12 @@ server {
         proxy_cache_use_stale     error timeout invalid_header updating
         http_500 http_502 http_503 http_504;
 
-    break;
+        # Intercept Errors
+        proxy_intercept_errors on; 
+        error_page 500 502 503 504 =503 /maintenance.html;
+        error_page 404 =404 /404.html; 
+        break;
+
     }
 
 
