Always Show 404 Errors on Static Items

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -503,7 +503,7 @@ server {
 
         # Intercept Errors
         proxy_intercept_errors on; 
-        error_page 500 502 503 504 =503 /maintenance.html;
+        error_page 500 502 503 504 =404 /404.html; 
         error_page 404 =404 /404.html; 
         break;
 
