--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -532,6 +532,8 @@ server {
         }
         proxy_set_header X-Real-IP $ip;
         proxy_pass $scheme://127.0.0.1/localize?callback=$arg_callback;
+        more_set_headers          "Server: TELIZE";
+
     }
 
     location /localize {
