Validate Pinterest - WGET

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -104,7 +104,7 @@ server {
       # BEGIN RULE GROUP TO REDIRECT TO HTTP/HTTPS PROTOCOL
 
         # Prevent Scapers
-        if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
+        #if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
 
         #/(x/|app/|w3c/|favicon\.ico|p3p\.xml|apple-touch-icon-144x144\.png) 
         # Default Value HTTPS
@@ -537,8 +537,8 @@ server {
     }
 
     location /localize {
-    set_real_ip_from 127.0.0.1;
-    echo_exec /jsonify ip=$remote_addr&country_code=$geoip_city_country_code&country_code3=$geoip_city_country_code3&country=$geoip_city_country_name&region_code=$geoip_region&region=$geoip_region_name&city=$geoip_city&postal_code=$geoip_postal_code&continent_code=$geoip_city_continent_code&latitude=$geoip_latitude&longitude=$geoip_longitude&dma_code=$geoip_dma_code&area_code=$geoip_area_code&org=$geoip_org&timezone=$geoip_timezone&callback=$arg_callback;
+      set_real_ip_from 127.0.0.1;
+      echo_exec /jsonify ip=$remote_addr&country_code=$geoip_city_country_code&country_code3=$geoip_city_country_code3&country=$geoip_city_country_name&region_code=$geoip_region&region=$geoip_region_name&city=$geoip_city&postal_code=$geoip_postal_code&continent_code=$geoip_city_continent_code&latitude=$geoip_latitude&longitude=$geoip_longitude&dma_code=$geoip_dma_code&area_code=$geoip_area_code&org=$geoip_org&timezone=$geoip_timezone&callback=$arg_callback;
     }
 
     location /jsonify {
