--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -69,6 +69,7 @@ server {
 
     # Site Name & Directory
     listen              80;
+    listen              127.0.0.1:80;
     listen              443 default_server ssl spdy;
     server_name         www.decalicious.com frank.decalicious.com x.decalicious.com;
     root                /usr/share/nginx/sites/decalicious-down/;
