Worker Rlimit Nofile

--- a/etc-config/nginx.custom.conf
+++ b/etc-config/nginx.custom.conf
@@ -2,15 +2,13 @@
 # CUSTOMIZED WITH GZIP and PERFORMANCE SETTINGS
 # LAST UPDATED BY FRANK 5-14-2014
 
-# NANO /etc/security/limits.conf  
-# Add the two following lines.
-# * soft nofile 16384
-# * hard nofile 16384
 
 
-worker_processes    2;
-worker_priority    -10;
-timer_resolution   100ms;
+
+worker_processes          2;
+worker_priority         -10;
+timer_resolution      100ms;
+worker_rlimit_nofile  30000;
 
 events {
    use                 epoll;
