Etsy Reverse Proxy

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -217,6 +217,26 @@ server {
         break;
     }
 
+
+   # LOCATION >>
+   # PROXY PASS ETSY API
+   location /etsy-proxy/ {
+
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-NginX-Proxy true;
+      proxy_pass https://openapi.etsy.com/;
+      proxy_ssl_session_reuse off;
+      proxy_set_header Host $http_host;
+      proxy_redirect off;
+      expires off;
+
+      break;
+    }
+
+
+
+
     # LOCATION >>
     # DECALICIOUS.com/blog (Blogger blog.decalicious.com) **** 
     location ~* ^/blog/(.*) {
