--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -222,12 +222,13 @@ server {
    # PROXY PASS ETSY API
    location /etsy-proxy/ {
 
+      set $etsy_url            'openapi.etsy.com';
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-NginX-Proxy true;
-      proxy_pass https://openapi.etsy.com/;
+      proxy_pass https://$etsy_url/;
       proxy_ssl_session_reuse off;
-      proxy_set_header Host $http_host;
+      proxy_set_header Host $etsy_url;
       proxy_redirect off;
       expires off;
 
