--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -220,19 +220,32 @@ server {
 
    # LOCATION >>
    # PROXY PASS ETSY API
-   location /etsy-proxy/ {
+    location ~* ^/etsy-proxy/(.*) {
 
       set $etsy_url            'openapi.etsy.com';
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-NginX-Proxy true;
-      proxy_pass https://$etsy_url/;
-      proxy_ssl_session_reuse off;
-      proxy_set_header Host $etsy_url;
-      proxy_redirect off;
-      expires off;
+      set $url_full            '$1';
 
-      break;
+        # PROXY SETTINGS
+        proxy_set_header          Accept-Encoding "";
+        proxy_http_version        1.1;
+        proxy_redirect            off;
+        proxy_set_header          Host $blog_url;
+        proxy_set_header          Authorization '';
+        proxy_hide_header         Set-Cookie;
+        proxy_hide_header         Cache-Control;
+        proxy_ignore_headers      "Set-Cookie";
+        proxy_buffering           off;
+        resolver                  8.8.4.4 8.8.8.8 valid=300s;
+        resolver_timeout          10s;
+        proxy_pass                https://$etsy_url/$url_full;
+        proxy_temp_path           /usr/share/nginx/temp;
+
+
+
+
+
+
+    break;
     }
 
 
