--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -229,7 +229,7 @@ server {
         proxy_set_header          Accept-Encoding "";
         proxy_http_version        1.1;
         proxy_redirect            off;
-        proxy_set_header          Host $blog_url;
+        proxy_set_header          Host $etsy_url;
         proxy_set_header          Authorization '';
         proxy_hide_header         Set-Cookie;
         proxy_hide_header         Cache-Control;
