--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -226,6 +226,13 @@ server {
       set $url_full            '$1';
 
         # PROXY SETTINGS
+       add_header 'Access-Control-Allow-Origin' 'https://www.decalicious.com, http://dev.decalicious.com';
+       add_header 'Access-Control-Allow-Credentials' 'true';
+       add_header 'Access-Control-Allow-Headers' 'Content-Type,Accept';
+       add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+
+
+
         proxy_set_header          Accept-Encoding "";
         proxy_http_version        1.1;
         proxy_redirect            off;
@@ -239,11 +246,6 @@ server {
         resolver_timeout          10s;
         proxy_pass                https://$etsy_url/$url_full;
         proxy_temp_path           /usr/share/nginx/temp;
-
-
-
-
-
 
     break;
     }
