--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -233,14 +233,14 @@ server {
 
 
 
-        proxy_set_header          Accept-Encoding "";
-        proxy_http_version        1.1;
+        #proxy_set_header          Accept-Encoding "";
+        #proxy_http_version        1.1;
         proxy_redirect            off;
         proxy_set_header          Host $etsy_url;
-        proxy_set_header          Authorization '';
-        proxy_hide_header         Set-Cookie;
-        proxy_hide_header         Cache-Control;
-        proxy_ignore_headers      "Set-Cookie";
+        #proxy_set_header          Authorization '';
+        #proxy_hide_header         Set-Cookie;
+        #proxy_hide_header         Cache-Control;
+        #proxy_ignore_headers      "Set-Cookie";
         proxy_buffering           off;
         resolver                  8.8.4.4 8.8.8.8 valid=300s;
         resolver_timeout          10s;
